# midi-arranger

./: .gitignore  DEVELOPMENT.md  README.md  analyze_sty_binary.py  analyze_style_notes.py  check_base_chord.py  example.py  pyproject.toml  requirements.txt  simple_sty_loader.py  test_chord_recognizer.py  test_style_loader.py  test_style_player.py
.claude/: settings.local.json
src/: __init__.py  chord_recognizer.py  midi_keyboard.py  style_player.py
sty/stili_miei/: ABBAFernando_.sty  ABBA_I_have_a_Dream.sty  Besame mucho BOLEROBR.STY  ClarkPetula_DowntownTY.sty  Dancing_Queen_(ABBA).sty  FrancescoDeGregori_Alice_Gkey_TY.sty  Only You - 50ballad.sty  S&Garfunkel_Scarborough_Fair_Emkey_TY.sty  S&Garfunkel_Sound_Of_Silence_Ebmkey_TY.sty  SoulShuffle.S611.sty  Swing1.S733.sty  Swing2.S249.sty  SwingHouse.S522.sty  Swingfox.S665aristocats.sty  ThemeHair_AquariusTy.sty  Una_Carezza_(Adriano_Celentano).sty  z oh Carol JGUARDA1.STY
tests/: __init__.py  test_midi_keyboard.py
